# profile-vault

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: browser.rs  cli.rs  config.rs  crypto.rs  error.rs  format.rs  index.rs  main.rs  pipeline.rs  process.rs  recovery.rs  vault.rs
