[package]
name = "profile-vault"
version = "0.2.0"
edition = "2021"
authors = ["momoyash"]
description = "Password-protect browser profiles with real encryption"
license = "MIT"
repository = "https://github.com/momoyash/profile-vault"
keywords = ["browser", "encryption", "privacy", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Streaming pipeline
tar = "0.4"
zstd = "0.13"

# Recovery codes
bip39 = "2"

# Identifiers / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem
walkdir = "2"
tempfile = "3"

# Terminal
rpassword = "7"
colored = "2"

# Errors
anyhow = "1"
thiserror = "2"

# Platform dirs
directories = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
